--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,8 +6,14 @@ on:
     branches: [ "main" ]
     tags:
       - 'v*'
+    paths:
+      - .github/workflows/build.yml
+      - influxdb.patch
   pull_request:
     branches: [ "main" ]
+    paths:
+      - .github/workflows/build.yml
+      - influxdb.patch
 
 permissions:
   contents: write
