--- a/.github/workflows/build-sandybridge.yml
+++ b/.github/workflows/build-sandybridge.yml
@@ -7,13 +7,13 @@ on:
     tags:
       - 'v*'
     paths:
-      - .github/workflows/build.yml
-      - influxdb.patch
+      - build-sandybridge.yml
+      - ../../influxdb-sandybridge.patch
   pull_request:
     branches: [ "main" ]
     paths:
-      - .github/workflows/build.yml
-      - influxdb.patch
+      - build-sandybridge.yml
+      - ../../influxdb-sandybridge.patch
 
 permissions:
   contents: write
@@ -52,7 +52,7 @@ jobs:
 
       - name: Apply patch
         working-directory: influxdb
-        run: "git apply ../influxdb.patch"
+        run: "git apply ../influxdb-sandybridge.patch"
 
       - name: Check apply patch
         working-directory: influxdb
